# hatchlingplatform

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  .replit  .travis.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTORS.md  CONTRIBUTORS.txt  Doxyfile  LICENSE.md  LICENSE.txt  README.md  README.txt  checkubuntu.sh  clean.sh  coverage.sh  debugbuild.sh  diff.sh  hatchling.cpp  hatchling.h  hxAllocator.h  hxArray.h  hxArrayTest.cpp  hxCUtils.c  hxConsole.cpp  hxConsole.h  hxConsoleInternal.h  hxConsoleTest.cpp  hxConsoleTest_FileTest.txt  hxDeterministicReplay.h  hxDeterministicReplayTest.cpp  hxDma.cpp  hxDma.h  hxDmaTest.cpp  hxFile.cpp  hxFile.h  hxFileTest.cpp  hxFileTest_ReadWrite.txt  (+49 more)
.github/workflows/: codeql-analysis.yml
VisualStudio/: .gitignore  Hatchling.sln  Hatchling.vcxproj  Hatchling.vcxproj.filters
clangtidy/: compile_commands.json
entanglement_example/: README.md  __init__.py  debugging.txt  pyproject.toml  setup.py  setup_cpp.sh
entanglement_example/src/: __init__.py  entanglement.py  entanglement_test.cpp  entanglement_test.py  entanglement_test_a.hpp  entanglement_test_b.hpp
entanglement_package_template/: pyproject.toml  setup_cpp.sh
entanglement_py_template/: README.md  __init__.py  entanglement.py  entanglement_cpp_test.cpp  entanglement_cpp_test.hpp  entanglement_py_template_test.py  entanglement_test.cpp  entanglement_test.hpp  entanglement_test_a.hpp  entanglement_test_b.hpp  pyproject.toml  setup.py  setup_cpp.sh
entanglement_template/: README.md  debug_decorator.py  entanglement.py  entanglement_test.py  pyproject.toml  setup.py  testinstall.sh
etc/: coverage.md  coverage.sh  debugbuild.sh  gittest.sh  test.sh  testdriver.sh  testgit.sh  wasm.sh
include/: entanglement.h
include/hx/: hatchling.h  hatchlingPch.hpp  hatchling_pch.hpp  hxAllocator.h  hxAllocator.hpp  hxArray.h  hxArray.hpp  hxConsole.h  hxConsole.hpp  hxDma.h  hxDma.hpp  hxFile.h  hxFile.hpp  hxHashTable.h  hxHashTable.hpp  hxHashTableNodes.h  hxHashTableNodes.hpp  hxKey.hpp  hxMemoryManager.h  hxProfiler.h  hxProfiler.hpp  hxRandom.hpp  hxSettings.h  hxSort.h  hxSort.hpp  hxStockpile.h  hxStringHash.h  hxStringLiteralHash.h  hxTask.h  hxTask.hpp  hxTaskQueue.h  hxTaskQueue.hpp  hxTest.h  hxTest.hpp  hxTime.h  hxTime.hpp  hxUniquePtr.h  hxalgorithm.hpp  hxallocator.hpp  hxarray.hpp  (+22 more)
include/hx/detail/: hxalgorithm_detail.hpp  hxconsole_detail.hpp  hxconsole_internal.hpp  hxhash_table_detail.hpp  hxhash_table_internal.hpp  hxprofiler_detail.hpp  hxprofiler_internal.hpp  hxsort_detail.hpp  hxtest_detail.hpp  hxtest_internal.hpp
include/hx/internal/: hxConsoleInternal.h  hxConsoleInternal.hpp  hxHashTableInternal.h  hxHashTableInternal.hpp  hxProfilerInternal.h  hxProfilerInternal.hpp  hxTestInternal.h  hxTestInternal.hpp  hxconsole_internal.hpp  hxhash_table_internal.hpp  hxprofiler_internal.hpp  hxtest_internal.hpp
py/: README.md  example.cpp  example.py  generate_bindings.py  hatchling_bindings.py  setup.py  testinstall.sh
src/: hatchling.cpp  hxCUtils.c  hxConsole.cpp  hxDma.cpp  hxFile.cpp  hxMemoryManager.cpp  hxProfiler.cpp  hxSettings.cpp  hxSort.cpp  hxStringHash.cpp  hxStringLiteralHash.cpp  hxTaskQueue.cpp  hxTestMain.cpp  hxarray_printer.py  hxc_utils.c  hxconsole.cpp  hxcutility.c  hxdma.cpp  hxfile.cpp  hxmemory_manager.cpp  hxprintf.cpp  hxprofiler.cpp  hxradix_sort.cpp  hxsettings.c  hxsettings.cpp  hxsort.cpp  hxstring_literal_hash.cpp  hxtask_queue.cpp  hxtest.cpp  hxutility.c  printf.c
test/: bindings_test.cpp  bindings_test.hpp  compile_commands.json  entanglement_module_test.cpp  entanglement_test.cpp  entanglement_test.hpp  hxArrayTest.cpp  hxCTest.c  hxCTest.h  hxConsoleTest.cpp  hxDmaTest.cpp  hxFileTest.cpp  hxHashTableTest.cpp  hxMemoryManagerTest.cpp  hxProfilerTest.cpp  hxRandomTest.cpp  hxSortTest.cpp  hxStringHashTest.cpp  hxTaskQueueTest.cpp  hxTest.h  hxTestMain.cpp  hxTestPRNG.h  hxalgorithm_test.cpp  hxarray_test.cpp  hxc_test.c  hxconsole_test.cpp  hxctest.c  hxctest.h  hxdma_test.cpp  hxfile_test.cpp  hxhash_table_test.cpp  hxkey_test.cpp  hxmemory_manager_test.cpp  hxprofiler_test.cpp  hxradix_sort_test.cpp  hxrandom_test.cpp  hxsort_test.cpp  hxstring_hash_test.cpp  hxstring_stream_test.cpp  hxstringstream_test.cpp  (+7 more)
