# SPDX-FileCopyrightText: © 2017-2025 Adrian Johnston.
# SPDX-License-Identifier: MIT
# This file is licensed under the terms of the LICENSE.md file.

# This is just an example pyproject.toml.

[build-system]
requires = ["setuptools>=61.0", "clang==18.1.8"]
build-backend = "setuptools.build_meta"

[project]
name = "entanglement_example"
version = "0.0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Description of the package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: C++',
  'Operating System :: POSIX :: Linux',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
