# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entanglement_template"
version = "0.0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Description of the package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: C++',
  'Operating System :: POSIX :: Linux',
  'Topic :: Software Development :: Libraries :: Python Modules',
]
